force-app/main/default/objects/Active_customer__c/Active_customer__c.object-meta.xml
<CustomObject>
    <label>Active customer</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Active customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Active customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>