force-app/main/default/objects/Active_customer__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <formula>TEXT ( Policy__r.Novidea_HPC__Action__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תוקף</label>
    <type>Text</type>
</CustomField>