force-app/main/default/objects/Active_customer__c/fields/Apartment_active_policy__c.field-meta.xml
<CustomField>
    <fullName>Apartment_active_policy__c</fullName>
    <label>Apartment active policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>