force-app/main/default/objects/Active_customer__c/fields/Business_active_policy__c.field-meta.xml
<CustomField>
    <fullName>Business_active_policy__c</fullName>
    <label>Business_active_policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>