force-app/main/default/objects/Active_customer__c/fields/Casco_active_Policy__c.field-meta.xml
<CustomField>
    <fullName>Casco_active_Policy__c</fullName>
    <label>Casco active Policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>