force-app/main/default/objects/Active_customer__c/fields/Effective_date__c.field-meta.xml
<CustomField>
    <fullName>Effective_date__c</fullName>
    <label>Effective date</label>
    <type>Date</type>
</CustomField>