force-app/main/default/objects/Active_customer__c/fields/Health_active_policy__c.field-meta.xml
<CustomField>
    <fullName>Health_active_policy__c</fullName>
    <label>Health active policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>