force-app/main/default/objects/Active_customer__c/fields/Hova_active_policy__c.field-meta.xml
<CustomField>
    <fullName>Hova_active_policy__c</fullName>
    <label>Hova active_policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>