force-app/main/default/objects/Active_customer__c/fields/Other_car_active_policy__c.field-meta.xml
<CustomField>
    <fullName>Other_car_active_policy__c</fullName>
    <label>Other car active policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>