force-app/main/default/objects/Active_customer__c/fields/PA_Active_policy__c.field-meta.xml
<CustomField>
    <fullName>PA_Active_policy__c</fullName>
    <label>PA Active policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>