force-app/main/default/objects/Active_customer__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <referenceTo>Novidea_HPC__Policy__c</referenceTo>
    <relationshipLabel>Active customers</relationshipLabel>
    <relationshipName>Active_customers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>