force-app/main/default/objects/Active_customer__c/fields/Policy_no__c.field-meta.xml
<CustomField>
    <fullName>Policy_no__c</fullName>
    <formula>Policy__r.Novidea_HPC__Policy_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy no</label>
    <type>Text</type>
</CustomField>