force-app/main/default/objects/Active_customer__c/fields/Product_category__c.field-meta.xml
<CustomField>
    <fullName>Product_category__c</fullName>
    <formula>Policy__r.Novidea_HPC__Product_Definition__r.Novidea_HPC__Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product category</label>
    <type>Text</type>
</CustomField>