force-app/main/default/objects/Active_customer__c/fields/Product_definition__c.field-meta.xml
<CustomField>
    <fullName>Product_definition__c</fullName>
    <formula>Policy__r.Novidea_HPC__Product_Definition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product definition</label>
    <type>Text</type>
</CustomField>