force-app/main/default/objects/Active_customer__c/fields/Riders_active_policy__c.field-meta.xml
<CustomField>
    <fullName>Riders_active_policy__c</fullName>
    <label>Riders active policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>