force-app/main/default/objects/Active_customer__c/fields/Special_Risks_active_policy__c.field-meta.xml
<CustomField>
    <fullName>Special_Risks_active_policy__c</fullName>
    <label>Special Risks active policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>