force-app/main/default/objects/Active_customer__c/fields/Travel_insurance_Active_policy__c.field-meta.xml
<CustomField>
    <fullName>Travel_insurance_Active_policy__c</fullName>
    <label>Travel insurance Active policy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>