force-app/main/default/objects/Active_customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Policy__c</columns>
    <columns>Action__c</columns>
    <columns>RI_active_policy__c</columns>
    <columns>Other_active_policy__c</columns>
    <columns>Health_active_policy__c</columns>
    <columns>Apartment_active_policy__c</columns>
    <columns>Travel_insurance_Active_policy__c</columns>
    <columns>Special_Risks_active_policy__c</columns>
    <columns>Business_active_policy__c</columns>
    <columns>Casco_active_Policy__c</columns>
    <columns>Other_car_active_policy__c</columns>
    <columns>PA_Active_policy__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>הכול</label>
    <language>iw</language>
</ListView>